--- a/components/header.html
+++ b/components/header.html
@@ -47,12 +47,24 @@
       <a href="../pages/about.html" class="sidebar-link">
         <span>Giới thiệu</span>
       </a>
-      <a href="../pages/services.html" class="sidebar-link">
-        <span>Dịch vụ</span>
-      </a>
       <div class="sidebar-dropdown">
         <div class="sidebar-dropdown-header">
-          <a href="../pages/service-construction.html" class="sidebar-link">
+          <a href="../pages/services.html" class="sidebar-link">
+            <span>Dịch vụ</span>
+          </a>
+          <button class="sidebar-dropdown-toggle">
+            <i class="ri-arrow-down-s-line dropdown-arrow"></i>
+          </button>
+        </div>
+        <div class="sidebar-dropdown-menu">
+          <a href="../pages/service-construction.html" class="sidebar-dropdown-item">Xây nhà trọn gói</a>
+          <a href="../pages/service-interior.html" class="sidebar-dropdown-item">Thiết kế nội thất</a>
+          <a href="../pages/detail_repair_home.html" class="sidebar-dropdown-item">Sửa nhà trọn gói</a>
+        </div>
+      </div>
+      <div class="sidebar-dropdown">
+        <div class="sidebar-dropdown-header">
+          <a href="../pages/news.html" class="sidebar-link">
             <span>Xây nhà trọn gói</span>
           </a>
           <button class="sidebar-dropdown-toggle">
@@ -62,13 +74,15 @@
         <div class="sidebar-dropdown-menu">
           <a href="../pages/detail-service-construction.html" class="sidebar-dropdown-item">Xây nhà trọn gói ở Hà
             Nội</a>
-          <a href="../pages/service-construction.html" class="sidebar-dropdown-item">Xây nhà trọn gói ở Bắc Ninh</a>
-          <a href="../pages/service-construction.html" class="sidebar-dropdown-item">Xây nhà trọn gói ở Nam Định</a>
+          <a href="../pages/detail-service-construction.html" class="sidebar-dropdown-item">Xây nhà trọn gói ở Bắc
+            Ninh</a>
+          <a href="../pages/detail-service-construction.html" class="sidebar-dropdown-item">Xây nhà trọn gói ở Nam
+            Định</a>
         </div>
       </div>
       <div class="sidebar-dropdown">
         <div class="sidebar-dropdown-header">
-          <a href="../pages/service-interior.html" class="sidebar-link">
+          <a href="../pages/news.html" class="sidebar-link">
             <span>Thiết kế nội thất</span>
           </a>
           <button class="sidebar-dropdown-toggle">
@@ -76,9 +90,9 @@
           </button>
         </div>
         <div class="sidebar-dropdown-menu">
-          <a href="../pages/service-interior.html" class="sidebar-dropdown-item">Thiết kế nội thất nhà ở</a>
-          <a href="../pages/service-interior.html" class="sidebar-dropdown-item">Thiết kế nội thất chung cư</a>
-          <a href="../pages/service-interior.html" class="sidebar-dropdown-item">Thiết kế nội thất văn phòng</a>
+          <a href="../pages/detail-service-interior.html" class="sidebar-dropdown-item">Thiết kế nội thất nhà ở</a>
+          <a href="../pages/detail-service-interior.html" class="sidebar-dropdown-item">Thiết kế nội thất chung cư</a>
+          <a href="../pages/detail-service-interior.html" class="sidebar-dropdown-item">Thiết kế nội thất văn phòng</a>
         </div>
       </div>
       <a href="../pages/project.html" class="sidebar-link">
