--- a/assets/css/detail-service-interior.css
+++ b/assets/css/detail-service-interior.css
@@ -4,7 +4,7 @@
 }
 
 /* Giao diện trang liên hệ giống ảnh mẫu */
-.detail-service-construction-container {
+.detail-service-interior-container {
     max-width: 1200px;
     margin: 40px auto 0 auto;
     padding: 0 20px;
@@ -523,12 +523,12 @@
 }
 
 .advantage-card {
+    background: #f8f9fa;
     padding: 25px;
     border-radius: 12px;
     text-align: center;
     transition: transform 0.3s ease;
-    border: 2px solid var(--primary-color);
-    /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
 
 .advantage-card:hover {
@@ -774,7 +774,7 @@
 }
 
 .author-info p {
-    font-size: 0.95rem;
+    font-size: 1.1rem;
     color: #666;
     line-height: 1.6;
     margin: 0;
